# caracal

./: .gitattributes  .gitignore  CITATION.cff  CONTRIBUTING.md  README  README.md  SECURITY.md  caracal.toml.example  go.work  go.work.sum  install-cli.ps1  install-cli.sh  install-console.ps1  install-console.sh  install-terminal.ps1  install-terminal.sh  install-tui.ps1  install-tui.sh  install.ps1  install.sh  knip.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release.config.json  vitest.config.ts
.changeset/: config.json
.claude/agents/: release-manager.md
.claude/rules/: code-style.instructions.md  command-architecture.instructions.md  console-example-naming.instructions.md  directory-instructions.instructions.md  docs-documentation.instructions.md  (+2 more)
.github/: CODEOWNERS  CONTRIBUTING.md  FUNDING.json  FUNDING.yml  codecov.yml  funding.json
.playwright-mcp/: page-2026-05-27T19-31-52-810Z.yml
apps/: instructions.md
docs/: CNAME  astro.config.mjs  package.json
examples/: agent.js  instructions.md
examples/lynxCapital/: .env.example  .env.provision.example  .gitignore  BUGS.md  Dockerfile  INSTRUCTIONS.md  README.md  compose.yaml  instructions.md  pyproject.toml
examples/lynxCapital/_mock/: Dockerfile  __init__.py  cases.py  docker-compose.yml  requirements.in  run_grpc_compliance.py  run_grpc_treasury.py  run_mcp_vendor.py  run_rest.py
examples/lynxCapital/_mock/faults/: __init__.py  engine.py  profile.yaml
examples/lynxCapital/_mock/grpc/: __init__.py
examples/lynxCapital/_mock/grpc/compliance_stream/: __init__.py  compliance.proto  compliance_pb2.py  compliance_pb2_grpc.py  server.py
examples/lynxCapital/_mock/grpc/treasury_ops/: __init__.py  server.py  treasury.proto  treasury_pb2.py  treasury_pb2_grpc.py
examples/lynxCapital/_mock/mcp/: __init__.py
examples/lynxCapital/_mock/mcp/vendor_portal/: __init__.py  server.py
examples/lynxCapital/_mock/providerlab/: app.py  auth.py  catalog.py  credentials.py  domain.py  instructions.md  intelligence.py  jwtmini.py  mandate.py  mcp.py  p256.py  run.py  seedenv.py  stsbridge.py  ui.py
examples/lynxCapital/_mock/providerlab/data/: generators.py
examples/lynxCapital/_mock/providerlab/providers/: aegis_screening.py  atlas_vendor.py  base.py  cordoba_fx.py  halcyon_bank.py  inkwell_ocr.py  junction_procure.py  keystone_treasury.py  lumen_identity.py  meridian_pay.py  pulse_market.py  quetzal_payouts.py  relay_automation.py  sabre_tax.py  slate_ledger.py  tallyhall_books.py  vela_notify.py  verafin_monitor.py
examples/lynxCapital/_mock/rest/: __init__.py  app.py  idempotency.py  jobs.py  middleware.py
examples/lynxCapital/_mock/rest/routers/: __init__.py  close_engine.py  compliance_nexus.py  customer_billing.py  fx_rates.py  job_provider.py  netsuite.py  tax_rules.py
examples/lynxCapital/_mock/sdk/lynx_sdk_stripe_treasury/: pyproject.toml
examples/lynxCapital/_mock/sdk/lynx_sdk_stripe_treasury/lynx_sdk_stripe_treasury/: client.py
examples/lynxCapital/_mock/sdk/lynx_sdk_tax/: pyproject.toml
examples/lynxCapital/_mock/sdk/lynx_sdk_tax/lynx_sdk_tax/: client.py
examples/lynxCapital/_mock/streaming/: __init__.py
examples/lynxCapital/_mock/streaming/fx_rates/: __init__.py  server.py
examples/lynxCapital/_mock/webhooks/: __init__.py  dispatcher.py
examples/lynxCapital/app/: caracal.py  config.py  main.py  tenancy.py
examples/lynxCapital/app/agents/: roles.py  runner.py  tools.py
examples/lynxCapital/app/api/: hooks.py  logs.py  session.py  setup.py
examples/lynxCapital/app/core/: jobs.py  memory.py  workers.py
examples/lynxCapital/app/events/: types.py
examples/lynxCapital/app/orchestration/: swarm.py
examples/lynxCapital/app/services/: partners.py  registry.py  resilience.py  streams.py
examples/lynxCapital/app/services/transport/: __init__.py  grpc_client.py  rest.py
examples/lynxCapital/app/services/transport/proto/treasury_ops/: treasury_pb2.py  treasury_pb2_grpc.py
examples/lynxCapital/app/web/: router.py
examples/lynxCapital/app/web/static/: app.js  chat.js  demo.css  graph.js  logs.js  prompts.json  theme.css
examples/lynxCapital/app/web/templates/: demo.html  landing.html  layout.html  logs.html  prompts.html  setup.html
examples/lynxCapital/app/web/templates/components/demo/: event_block.html  input_component.html  message_component.html  plan_block.html
examples/lynxCapital/config/: caracal-resources.json  company.yaml  tenancy.yaml
examples/lynxCapital/docs/: INTEGRATION_PLAN.md
examples/lynxCapital/policies/: 00-base.rego  01-bindings.rego  02-grants.rego  10-decisions.rego  10-operations.rego  11-intake.rego  12-ledger.rego  13-compliance.rego  15-payments.rego  auditor.rego  compliance-admin.rego  compliance-review.rego  customer-admin.rego  delegated-advisor.rego  emergency-access.rego  manifest.json  portfolio-admin.rego  portfolio-read.rego  portfolio-write.rego  research-read.rego  research-write.rego
examples/lynxCapital/policies/tests/: library_test.rego
examples/lynxCapital/scripts/: control_client.py  provision.py  provision_plan.py  reference.py  teardown.py
examples/lynxCapital/tests/: .caracal.toml.tmp  conftest.py  test_caracal_boundary.py  test_caracal_integration.py  test_controls.py  test_ironbark_erp.py  test_lifecycle.py  test_lifecycle_long.py  test_partners.py  test_policy_library.py  test_provider_transports.py  test_providerlab.py  test_provision.py  test_slate_ledger.py  test_tenancy_plan.py  test_web_access.py  test_wiring.py
governance/: GOVERNANCE.md  INCIDENT_RESPONSE.md  THREAT_MODEL.md  instructions.md
infra/: instructions.md
releases/: instructions.md
scripts/: benchEnterprise.mjs  checkStyle.sh  control-api-smoke.mjs  detectChangedPackages.mjs  generateChangesetsIgnore.mjs  generateReleaseRecord.mjs  instructions.md  postReleaseValidate.sh  publishNpm.sh  publishPackages.sh  publishPypi.sh  rc.mjs  rc.sh  release.mjs  release.sh  releaseInventory.mjs  runGoSourceTests.sh  setupDev.mjs  testCi.sh  validateReleaseManifest.mjs
services/: instructions.md
tests/: instructions.md
tests/go/: go.mod  (+1 more)
(+1290 files in other folders)
