# Copyright (C) 2026 Garudex Labs.  All Rights Reserved.
# Caracal, a product of Garudex Labs
#
# Lynx Capital demo project definition.

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lynx-capital"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "jinja2>=3.1",
    "sse-starlette>=2.1",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "langchain>=0.3",
    "langchain-openai>=0.3",
    "langgraph>=0.2",
    "deepagents>=0.5",
    "httpx>=0.27",
    "grpcio>=1.62",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "grpcio-tools>=1.62",
]

# Local-only packages (mock provider SDKs + Caracal SDK). They are not
# published; install them as editables alongside the project. With `uv` the
# `[tool.uv.sources]` table below resolves them automatically; with plain
# `pip` use the install line in the README.

[tool.uv.sources]
lynx-sdk-stripe-treasury  = { path = "_mock/sdk/lynx_sdk_stripe_treasury", editable = true }
lynx-sdk-tax              = { path = "_mock/sdk/lynx_sdk_tax",             editable = true }
caracalai-sdk             = { path = "../../packages/sdk/python",          editable = true }

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
