# Copyright (C) 2026 Garudex Labs.  All Rights Reserved.
# Caracal, a product of Garudex Labs
#
# Lynx Capital demo project definition.

[build-system]
requires = ["setuptools>=82.0.1", "wheel>=0.47.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lynx-capital"
version = "0.1.5rc3"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136",
    "uvicorn[standard]>=0.46",
    "jinja2>=3.1",
    "sse-starlette>=3.4",
    "pydantic>=2.13",
    "pyyaml>=6.0",
    "langchain>=1.3",
    "langchain-core>=1.3.3",
    "langsmith>=0.8.0",
    "mako>=1.3.12",
    "langchain-openai>=1.2",
    "langgraph>=1.2",
    "deepagents>=0.6",
    "httpx>=0.28",
    "idna>=3.15",
    "grpcio>=1.80",
    "protobuf>=6.33,<7",
    "python-dotenv>=1.2",
    "redis>=5.2",
    # Caracal SDK — published release v2026.06.20-rc.1. Upstream gateway routing for
    # external providers and the verifier boundary for internal providers.
    "caracalai-sdk==0.1.5rc3",
    "caracalai-core==0.1.5rc3",
    "caracalai-identity==0.1.5rc3",
    "caracalai-oauth==0.1.5rc3",
    "caracalai-revocation==0.1.5rc3",
    "caracalai-transport-mcp==0.1.5rc3",
    "caracalai-mcp-fastmcp==0.1.5rc3",
    "caracalai-revocation-redis==0.1.5rc3",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "grpcio-tools>=1.80",
]

# Local-only provider SDK fixtures. They are not published; install
# them as editables alongside the project: see the install line in README.

# Global resolution floors for transitive deps (Dependabot / GHSA minima).
[tool.uv]
constraint-dependencies = [
    "langsmith>=0.8.18",
    "langchain>=1.3.9",
    "langchain-anthropic>=1.4.6",
    "langchain-core>=1.3.3",
    "idna>=3.15",
    "mako>=1.3.12",
    "starlette==1.3.1",
    "cryptography>=48.0.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
