[project]
name = "lynx-sdk-stripe-treasury"
version = "0.1.4rc1"
description = "Internal Stripe Treasury SDK shim used by LynxCapital"
requires-python = ">=3.12"
dependencies = ["httpx>=0.28", "idna>=3.15"]

[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
