[project]
name = "lynx-sdk-tax"
version = "0.1.1"
description = "Internal tax-rules SDK shim used by LynxCapital"
requires-python = ">=3.14"
dependencies = ["httpx>=0.28"]

[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
